--- a/page.html
+++ b/page.html
@@ -7,7 +7,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <main>
+    <main data-color="#eee">
       <h2>I love<span>git</span>&<span>github</span></h2>
     </main>
   </body>
